# monarchmoney-python-sdk

./: .envrc  .gitignore  API_FUNCTIONALITY_TEST_REPORT.md  LICENSE  MODERNIZATION_ANALYSIS.md  Makefile  QUICK_REFERENCE.md  README.md  README_AUTH.md  analyze_apple_accounts.py  analyze_apple_transactions.py  federation_financial_assessment.py  get_accounts_with_token.py  main.py  migrate_apple_cash_transactions.py  monarch_cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_login.py
data/backups/: Apple_Card_Aug10_backup.json  Apple_Card_prev_backup.json  BACKUP_SUMMARY.json  TK_APPL_CC_backup.json  unique_transactions_to_migrate.json
data/exports/: Apple_Card_prev_transactions.csv  Apple_Card_prev_transactions.json  Apple_Card_transactions.csv  Apple_Card_transactions.json  Apple_Cash_transactions.csv  Apple_Cash_transactions.json  Apple_card_old__transactions.json  Apple_cash_old_transactions.json  Apple_savings_old_transactions.json  EXPORT_SUMMARY.json  MC_APPL_SAV_transactions.csv  MC_APPL_SAV_transactions.json  Monika_-_Apple_Card_transactions.csv  Monika_-_Apple_Card_transactions.json  Savings_transactions.csv  Savings_transactions.json  TK_APPL_CC_transactions.csv  TK_APPL_CC_transactions.json  TK_APPL_Cash_transactions.csv  TK_APPL_Cash_transactions.json  TK_APPL_SAV_transactions.csv  TK_APPL_SAV_transactions.json  accounts_data.json  monarch_data_20250809_193029.json  monarch_data_20250809_203659.json  monarch_data_20250809_205840.json  monarch_data_20250809_224304.json  monarch_data_20250809_224342.json
data/migrations/: TK_APPL_CASH_unique_transactions.csv  TK_APPL_CASH_unique_transactions.json  TK_APPL_SAV_unique_savings_transactions.json
examples/: README.md  clear_session_and_login.py  main.py  test_ttl.py
logs/: .2d7c91b990cc590ccfb7d0cf132c235aa92dff11-audit.json
monarchmoney/: __init__.py  cli.py  monarchmoney.py
monarchmoney.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: get_accounts.json  test_monarchmoney.py
