[metadata]
name = monarchmoney
version = attr: monarchmoney.__version__
description = Python SDK for Monarch Money
long_description = file: README.md
long_description_content_type = text/markdown
author = MonarchMoney Python SDK Contributors
author_email = monarchmoney@example.com
url = https://github.com/hammem/monarchmoney
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.8.0
    gql>=3.4.0
    oathtool>=2.3.0
